--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,13 @@ main{
 .hidden{
     opacity: 0;
 }
+
+.caption-container{
+    max-width: 50%;
+    border-radius: 16px;
+    position: absolute;
+    padding: 16px 24px;
+    bottom: 20px;
+    left: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+}
